# llm_xml_caster

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
helper/: Cargo.toml
helper/src/: lib.rs
src/: bind.rs  error.rs  lib.rs
src/type/: bool.rs  btreemap.rs  enum.rs  float.rs  hashmap.rs  integer.rs  macro.rs  mod.rs  option.rs  string.rs  vector.rs
src/type/third/: mod.rs  ordered_float.rs
tests/: macro_test.rs
