[package]
name = "llm_xml_caster_helper"
version = "0.1.0"
edition = "2024"
description = "Helper crate containing proc-macros for llm_xml_caster."
license = "MIT"
repository = "https://github.com/vintcessun/llm_xml_caster"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.111", features = ["full"] }
quote = "1.0.42"
proc-macro2 = "1.0.106"

[features]
ordered_float = []
